# arena_evals_setup

./: README.md  pyproject.toml
src/: 3_3_running_evals_with_inspect.py
src/tests/: test.py
